Agregando Redireccion al editar datos

--- a/elcarto/elcartografo2/src/main/webapp/Allxhtml/editardatos.xhtml
+++ b/elcarto/elcartografo2/src/main/webapp/Allxhtml/editardatos.xhtml
@@ -14,7 +14,7 @@
             </link>
         <header id="main-header">
 		
-		<a id="logo-header" href="../Admin/PaginaAdminIH.xhtml">
+            <a id="logo-header" href="#{controladorSesion.redirect()}">
 			<span class="site-name">El Cartografo</span>
 		</a> <!-- / #logo-header -->
  
