--- a/elcarto/elcartografo2/src/main/webapp/inicioS/iniciarsesion.xhtml
+++ b/elcarto/elcartografo2/src/main/webapp/inicioS/iniciarsesion.xhtml
@@ -27,7 +27,8 @@
                         <p:password class="texto" id="password" value="#{controladorSesion.contrasenia}" style="width: 250px; height:30px" placeholder="Contraseña"  required="true" requiredMessage="Por favor ingresa tu contrasenia"/> <br/>
                         <p:message for="password"/>
                         <p:commandButton class="texto" action="#{controladorSesion.login()}" value="Iniciar Sesion" style="width: 250px; height:50px; text-align: center" update="login" />
-                        
+                        <br><h:outputText value="¿No te has registrado?" style="float: right"/></br>
+                        <h:link outcome="/registroU/registrar.xhtml" value="Registrate aqui" style="float: right"/>
                     </h:form>
             
             <h:form id="logout" rendered="#{not empty user}">
