--- a/elcarto/elcartografo2/src/main/webapp/Allxhtml/colocarmarcador.xhtml
+++ b/elcarto/elcartografo2/src/main/webapp/Allxhtml/colocarmarcador.xhtml
@@ -25,7 +25,7 @@
 		</a> 
                  <nav>
                      <ul>
-                     <li><a href="#{controladorSesion.redirect()}">Regresar</a></li>
+                     <li><a href="#{controladorSesion.redirect1()}">Regresar</a></li>
                      </ul>
                  </nav>
             </header>
